Album release update
Changed to show the release of Morning Childhood

--- a/index.html
+++ b/index.html
@@ -3,13 +3,42 @@
 <head>
 <title>Penguinator's Website</title>
 </head>
-<body>
+<body style="background-color:linen;">
 
-<h1>Penguinator on the internet!</h1>
+<h1 style="font-family:helvetica;">Penguinator on the internet!</h1>
 
 <img src="Pixelated.png" width='97' height='185' alt="Pixelated picture of a penguin">
 
-<p>This website is quite obviously under construction, and I'm using it as a way to learn HTML. It will probably look better soon.</p>
+<h2 style="font-family:helvetica;">Latest Releases:</h2>
+<h3><a href="https://www.youtube.com/playlist?list=PL776zvniD1BgcfWSzQMULW9BSMiQO71t7" style="font-family:helvetica;">My first album, Morning Childhood.</a></h2>
+<p style="font-family:helvetica;">Listen to the single 'Hello World!' below.</p>
+<img src="MC.png" width='300' height='300' alt="Morning Childhood cover art">
+<audio
+    controls
+    src="HW.mp3">
+        Your browser does not support the
+        <code>audio</code> element.
+</audio>
+<br>
+<h3><a href="https://youtu.be/6V9mgLEXJZ4" style="font-family:helvetica;">Freight Train (Single)</a></h2>
+<img src="FT.png" width='300' height='300' alt="Freight Train cover art">
+<audio
+    controls
+    src="Freight Train.mp3">
+        Your browser does not support the
+        <code>audio</code> element.
+</audio>
+
+<h2 style="font-family:helvetica;">Upcoming:</h2>
+
+<h2 style="font-family:helvetica;">Here's where to find me:</h2>
+<a href="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" title="I'm mainly here." style="font-family:helvetica;">YouTube</a>
+<br>
+<a href="https://soundcloud.com/penguinator-626121505" style="font-family:helvetica;">SoundCloud</a>
+
+<hr>
+
+<p style="font-family:helvetica;">This website is quite obviously under construction, and I'm using it as a way to learn HTML. It will probably look better soon.</p>
 
 </body>
 </html>
