--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 </head>
 <body style="background-color:linen;">
 
-<h1 style="font-family:helvetica;">Penguinator on the internet!</h1>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<img src="Pixelated.png" width='97' height='185' alt="Pixelated picture of a penguin">
+<h1 style="font-family:helvetica;"><img src="https://yt3.ggpht.com/a-/AOh14GiPUToUh06T6jzaxJ1V0R-1YyLfLK-2vuPWnTxUjQ=s288-c-k-c0xffffffff-no-rj-mo" style="float:right;width:100px;height:100px;" alt="Penguinator Logo">Penguinator on the internet!</h1>
 
 <h2 style="font-family:helvetica;">Latest Releases:</h2>
 <h3><a href="https://www.youtube.com/playlist?list=PL776zvniD1BgcfWSzQMULW9BSMiQO71t7" style="font-family:helvetica;">My first album, Morning Childhood.</a></h2>
-<p style="font-family:helvetica;">Listen to the single 'Hello World!' below.</p>
+<p style="font-family:helvetica;">Listen to the single 'Hello World!' below:</p>
 <img src="MC.png" width='300' height='300' alt="Morning Childhood cover art">
 <audio
     controls
@@ -30,6 +30,7 @@
 </audio>
 
 <h2 style="font-family:helvetica;">Upcoming:</h2>
+<p style="font-family:helvetica;"> Incremental improvements to this website, probably. In any case, not much; I'm starting uni soon, so that'll be busying me for a while.</p>
 
 <h2 style="font-family:helvetica;">Here's where to find me:</h2>
 <a href="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" title="I'm mainly here." style="font-family:helvetica;">YouTube</a>
