Tentative steps into CSS
Also, working out additional pages.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,45 @@
+<!-- Find out how to do multiple pages! -->
+
 <!doctype html>
 <html lang="en-GB">
 <head>
 <title>Penguinator's Website</title>
 </head>
-<body style="background-color:linen;">
+<body>
+
+<!-- Only very basic styling at the minute. -->
+
+<style>
+body {background-color: linen;}
+h1   {font-family:helvetica;}
+h2 {font-family:helvetica;}
+h3 {font-family:helvetica;}
+p    {font-family:helvetica;}
+table, th, td {
+padding: 5px;
+
+}
+</style>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<h1 style="font-family:helvetica;"><img src="https://yt3.ggpht.com/a-/AOh14GiPUToUh06T6jzaxJ1V0R-1YyLfLK-2vuPWnTxUjQ=s288-c-k-c0xffffffff-no-rj-mo" style="float:right;width:100px;height:100px;" alt="Penguinator Logo">Penguinator on the internet!</h1>
+<h1><img src="https://yt3.ggpht.com/a-/AOh14GiPUToUh06T6jzaxJ1V0R-1YyLfLK-2vuPWnTxUjQ=s288-c-k-c0xffffffff-no-rj-mo" style="float:right;width:100px;height:100px;" alt="Penguinator Logo">Penguinator on the internet!</h1>
 
-<h2 style="font-family:helvetica;">Latest Releases:</h2>
-<h3><a href="https://www.youtube.com/playlist?list=PL776zvniD1BgcfWSzQMULW9BSMiQO71t7" style="font-family:helvetica;">My first album, Morning Childhood.</a></h2>
-<p style="font-family:helvetica;">Listen to the single 'Hello World!' below:</p>
+<!-- This logo should update with the YouTube one. -->
+
+<table>
+  <tr>
+    <td><h3>Quick Links:</h3></td>
+    <td><p><a href="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" target="_blank" title="I'm mainly here.">YouTube</a></p></td>
+    <td><p><a href="https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA" target="_blank">Spotify</a></p></td>
+    <td><p><a href="https://soundcloud.com/penguinator-626121505" target="_blank">SoundCloud</a></p></td>
+<!--     <td><p><a href="test.html" target="_blank">TEST</a></p></td> -->
+  </tr>
+</table>
+
+<h2>Latest Releases:</h2>
+<h3><a href="https://www.youtube.com/playlist?list=PL776zvniD1BgcfWSzQMULW9BSMiQO71t7" target="_blank">My first album, Morning Childhood.</a></h2>
+<p>Listen to the single 'Hello World!' below:</p>
 <img src="MC.png" width='300' height='300' alt="Morning Childhood cover art">
 <audio
     controls
@@ -20,7 +48,7 @@
         <code>audio</code> element.
 </audio>
 <br>
-<h3><a href="https://youtu.be/6V9mgLEXJZ4" style="font-family:helvetica;">Freight Train (Single)</a></h2>
+<h3><a href="https://youtu.be/6V9mgLEXJZ4" target="_blank">Freight Train (Single)</a></h2>
 <img src="FT.png" width='300' height='300' alt="Freight Train cover art">
 <audio
     controls
@@ -29,17 +57,15 @@
         <code>audio</code> element.
 </audio>
 
-<h2 style="font-family:helvetica;">Upcoming:</h2>
-<p style="font-family:helvetica;"> Incremental improvements to this website, probably. In any case, not much; I'm starting uni soon, so that'll be busying me for a while.</p>
+<h2>Upcoming:</h2>
+<p> Incremental improvements to this website, probably. In any case, not much; I'm starting uni soon, so that'll be busying me for a while.</p>
 
-<h2 style="font-family:helvetica;">Here's where to find me:</h2>
-<a href="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" title="I'm mainly here." style="font-family:helvetica;">YouTube</a>
-<br>
-<a href="https://soundcloud.com/penguinator-626121505" style="font-family:helvetica;">SoundCloud</a>
-
+<h2>Contact me:</h2>
+<p>If, for whatever reason, you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
+<p><a href="mailto:ophagen@icloud.com">Send email</a></p>
 <hr>
 
-<p style="font-family:helvetica;">This website is quite obviously under construction, and I'm using it as a way to learn HTML. It will probably look better soon.</p>
+<p>This website is quite obviously under construction, and I'm using it as a way to learn HTML. It will probably look better soon.</p>
 
 </body>
 </html>
