--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ padding: 5px;
 </audio>
 
 <h2>Upcoming:</h2>
-<p> Incremental improvements to this website, probably. In any case, not much; I'm starting uni soon, so that'll be busying me for a while.</p>
+<p> Incremental improvements to this website, probably. In any case, not much; I've just started uni, and I'm super busy.</p>
 
 <h2>Contact me:</h2>
 <p>If, for whatever reason, you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
