Change to 'upcoming'

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ padding: 5px;
 </audio>
 
 <h2>Upcoming:</h2>
-<p> Incremental improvements to this website, probably. In any case, not much; I've just started uni, and I'm super busy.</p>
+<p> I'm writing some songs at the moment, but I don't have any time to record them because of uni. So I guess some music will probably appear at some point. Eventually. Probably next year.</p>
 
 <h2>Contact me:</h2>
 <p>If, for whatever reason, you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
