--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@ padding: 5px;
 </table>
 
 <h2>Latest Releases:</h2>
+<h3><a href="https://youtu.be/bPEYikG3EiM" target="_blank">A Last Word on 2020 (What a God-Awful Year)</a></h2>
+<img src="LWO2020.jpg" width='300' height='300' alt="What a God-Awful Year cover art">
+<audio
+    controls
+    src="GAY.mp3">
+        Your browser does not support the
+        <code>audio</code> element.
+</audio>
+<br>
+
 <h3><a href="https://www.youtube.com/playlist?list=PL776zvniD1BgcfWSzQMULW9BSMiQO71t7" target="_blank">My first album, Morning Childhood.</a></h2>
 <p>Listen to the single 'Hello World!' below:</p>
 <img src="MC.png" width='300' height='300' alt="Morning Childhood cover art">
@@ -58,7 +68,7 @@ padding: 5px;
 </audio>
 
 <h2>Upcoming:</h2>
-<p> I'm writing some songs at the moment, but I don't have any time to record them because of uni. So I guess some music will probably appear at some point. Eventually. Probably next year.</p>
+<p> Revising for uni exams at the moment. Once those are done, another term of work. What fun. Stuff's been written, but recording it is quite difficult; finding the time is challenging already, but I'm also nervous of my flatmates hearing the out-takes...</p>
 
 <h2>Contact me:</h2>
 <p>If, for whatever reason, you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
