Me at the moment update

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@ padding: 5px;
         <code>audio</code> element.
 </audio>
 
-<h2>Upcoming:</h2>
-<p> Revising for uni exams at the moment. Once those are done, another term of work. What fun. Stuff's been written, but recording it is quite difficult; finding the time is challenging already, but I'm also nervous of my flatmates hearing the out-takes...</p>
+<h2>Me at the moment:</h2>
+<p> Revising for uni exams at the moment. Once those are done, another term of work. What fun. Stuff's been written, but recording it is quite difficult; finding the time is challenging already, but I'm also nervous of my flatmates hearing the out-takes...
+
+Also, I just started listening to Daniel Johnston. I may be down this wormhole for quite a while.</p>
 
 <h2>Contact me:</h2>
 <p>If, for whatever reason, you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
