Change name, add Get Around
Changed from Penguinator's website to Oliver Hagen's website.
Added Get Around cover, changed the 'Me Now' section, added 'non-musical stuff' tab, currently empty.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!doctype html>
 <html lang="en-GB">
 <head>
-<title>Penguinator's Website</title>
+<title>Oliver Hagen's Website</title>
 </head>
 <body>
 
@@ -23,7 +23,8 @@ padding: 5px;
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<h1><img src="https://yt3.ggpht.com/a-/AOh14GiPUToUh06T6jzaxJ1V0R-1YyLfLK-2vuPWnTxUjQ=s288-c-k-c0xffffffff-no-rj-mo" style="float:right;width:100px;height:100px;" alt="Penguinator Logo">Penguinator on the internet!</h1>
+<h1><img src="https://yt3.ggpht.com/a-/AOh14GiPUToUh06T6jzaxJ1V0R-1YyLfLK-2vuPWnTxUjQ=s288-c-k-c0xffffffff-no-rj-mo" style="float:right;width:100px;height:100px;" alt="Penguinator Logo">Oliver Hagen's Website</h1>
+<p>Various doings, conveniently collected for very little reason.</p>
 
 <!-- This logo should update with the YouTube one. -->
 
@@ -33,13 +34,24 @@ padding: 5px;
     <td><p><a href="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" target="_blank" title="I'm mainly here.">YouTube</a></p></td>
     <td><p><a href="https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA" target="_blank">Spotify</a></p></td>
     <td><p><a href="https://soundcloud.com/penguinator-626121505" target="_blank">SoundCloud</a></p></td>
-<!--     <td><p><a href="test.html" target="_blank">TEST</a></p></td> -->
+    <td><p><a href="test.html" target="_blank">Non-musical stuff</a></p></td>
   </tr>
 </table>
 
 <h2>Latest Releases:</h2>
-<h3><a href="https://youtu.be/bPEYikG3EiM" target="_blank">A Last Word on 2020 (What a God-Awful Year)</a></h2>
+
+<img src="GetAround.jpg" height='300' alt="Get Around cover art">
+<h3><a href="https://youtu.be/bPEYikG3EiM" target="_blank">Get Around (The Outs cover)</a></h3>
+<audio
+    controls
+    src="GA.mp3">
+        Your browser does not support the
+        <code>audio</code> element.
+</audio>
+<br>
+
 <img src="LWO2020.jpg" width='300' height='300' alt="What a God-Awful Year cover art">
+<h3><a href="https://youtu.be/bPEYikG3EiM" target="_blank">A Last Word on 2020 (What a God-Awful Year) (Single)</a></h3>
 <audio
     controls
     src="GAY.mp3">
@@ -48,9 +60,10 @@ padding: 5px;
 </audio>
 <br>
 
-<h3><a href="https://www.youtube.com/playlist?list=PL776zvniD1BgcfWSzQMULW9BSMiQO71t7" target="_blank">My first album, Morning Childhood.</a></h2>
-<p>Listen to the single 'Hello World!' below:</p>
+
 <img src="MC.png" width='300' height='300' alt="Morning Childhood cover art">
+<h3><a href="https://www.youtube.com/playlist?list=PL776zvniD1BgcfWSzQMULW9BSMiQO71t7" target="_blank">My first album, Morning Childhood.</a></h3>
+<p>Listen to the single 'Hello World!' below:</p>
 <audio
     controls
     src="HW.mp3">
@@ -58,8 +71,8 @@ padding: 5px;
         <code>audio</code> element.
 </audio>
 <br>
-<h3><a href="https://youtu.be/6V9mgLEXJZ4" target="_blank">Freight Train (Single)</a></h2>
 <img src="FT.png" width='300' height='300' alt="Freight Train cover art">
+<h3><a href="https://youtu.be/6V9mgLEXJZ4" target="_blank">Freight Train (Single)</a></h3>
 <audio
     controls
     src="Freight Train.mp3">
@@ -68,9 +81,7 @@ padding: 5px;
 </audio>
 
 <h2>Me at the moment:</h2>
-<p> Revising for uni exams at the moment. Once those are done, another term of work. What fun. Stuff's been written, but recording it is quite difficult; finding the time is challenging already, but I'm also nervous of my flatmates hearing the out-takes...
-
-Also, I just started listening to Daniel Johnston. I may be down this wormhole for quite a while.</p>
+<p> Starting my second term of university, feeling woefully underprepared for it. Also, doing a project for the year- making weird covers of lesser-known songs which I enjoy listening to.</p>
 
 <h2>Contact me:</h2>
 <p>If, for whatever reason, you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
