Added several months' worth of song updates

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- Find out how to do multiple pages! -->
-
 <!doctype html>
 <html lang="en-GB">
 <head>
@@ -34,54 +32,75 @@ padding: 5px;
     <td><p><a href="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" target="_blank" title="I'm mainly here.">YouTube</a></p></td>
     <td><p><a href="https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA" target="_blank">Spotify</a></p></td>
     <td><p><a href="https://soundcloud.com/penguinator-626121505" target="_blank">SoundCloud</a></p></td>
-    <td><p><a href="ATA.html" target="_blank">The Bad Music Scene: All The Audio Project</a></p></td>
+   <!-- <td><p><a href="ATA.html" target="_blank">The Bad Music Scene: All The Audio Project</a></p></td>-->
   </tr>
 </table>
 
 <h2>Latest Releases:</h2>
 
-<img src="GetAround.jpg" height='300' alt="Get Around cover art">
-<h3><a href="https://youtu.be/uWbwUXknqgw" target="_blank">Get Around (The Outs cover)</a></h3>
+
+<img src="https://i.ytimg.com/vi/G3N0smmkBcc/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLChg76d5_cQNLLy9bBu-tmrvUsh6A" width='300' alt="Oh Hell YouTube Thumbnail">
+<h3><a href="https://www.youtube.com/watch?v=G3N0smmkBcc" target="_blank">March: Oh Hell (Jack Conte cover)</a></h3>
 <audio
     controls
-    src="GA.mp3">
+    src="OhHell.mp3">
         Your browser does not support the
         <code>audio</code> element.
 </audio>
 <br>
 
-<img src="LWO2020.jpg" width='300' height='300' alt="What a God-Awful Year cover art">
+<img src="https://i.ytimg.com/vi/q7du58H6CUI/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLBOTs3bQkHIheVPncKSnNKpFMCOig" width='300' alt="Get Around cover art">
+<h3><a href="https://www.youtube.com/watch?v=q7du58H6CUI" target="_blank">February: Joy Without Pleasure (Daniel Johnston cover)</a></h3>
+<audio
+    controls
+    src="JoyWithoutPleasure.mp3">
+        Your browser does not support the
+        <code>audio</code> element.
+</audio>
+<br>
+
+<img src="https://i.ytimg.com/vi/uWbwUXknqgw/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLDuXJeg8SH2ItPRCGMd-sit30qohg" width='300' alt="Get Around YouTube Thumbnail">
+<h3><a href="https://youtu.be/uWbwUXknqgw" target="_blank">January: Get Around (The Outs cover)</a></h3>
+<audio
+    controls
+    src="GetAround.mp3">
+        Your browser does not support the
+        <code>audio</code> element.
+</audio>
+<br>
+
+<img src="LastWordOn2020.jpg" width='300' height='300' alt="What a God-Awful Year cover art">
 <h3><a href="https://youtu.be/bPEYikG3EiM" target="_blank">A Last Word on 2020 (What a God-Awful Year) (Single)</a></h3>
 <audio
     controls
-    src="GAY.mp3">
+    src="LastWordOn2020.mp3">
         Your browser does not support the
         <code>audio</code> element.
 </audio>
 <br>
 
 
-<img src="MC.png" width='300' height='300' alt="Morning Childhood cover art">
+<img src="MorningChildhood.png" width='300' height='300' alt="Morning Childhood cover art">
 <h3><a href="https://www.youtube.com/playlist?list=PL776zvniD1BgcfWSzQMULW9BSMiQO71t7" target="_blank">My first album, Morning Childhood.</a></h3>
 <p>Listen to the single 'Hello World!' below:</p>
 <audio
     controls
-    src="HW.mp3">
+    src="HelloWorld.mp3">
         Your browser does not support the
         <code>audio</code> element.
 </audio>
 <br>
-<img src="FT.png" width='300' height='300' alt="Freight Train cover art">
+<img src="FreightTrain.png" width='300' height='300' alt="Freight Train cover art">
 <h3><a href="https://youtu.be/6V9mgLEXJZ4" target="_blank">Freight Train (Single)</a></h3>
 <audio
     controls
-    src="Freight Train.mp3">
+    src="FreightTrain.mp3">
         Your browser does not support the
         <code>audio</code> element.
 </audio>
 
 <h2>Me at the moment:</h2>
-<p> Starting my second term of university, feeling woefully underprepared for it. Also, doing a project for the year- making weird covers of lesser-known songs which I enjoy listening to.</p>
+<p> Coming up on the end of my first year at the University of Birmingham, which means end-term exams. Still working on my 2021 project of covering lesser-known songs,  but also getting some original stuff on the go again.</p>
 
 <h2>Contact me:</h2>
 <p>If, for whatever reason, you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
