added short bio

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ body {background-color: linen;}
 h1   {font-family:helvetica;}
 h2 {font-family:helvetica;}
 h3 {font-family:helvetica;}
+h4 {font-family:helvetica;}
 p    {font-family:helvetica;}
+pre	{font-family:helvetica;}
 table, th, td {
 padding: 5px;
 
@@ -22,8 +24,6 @@ padding: 5px;
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <h1><img src="https://yt3.ggpht.com/a-/AOh14GiPUToUh06T6jzaxJ1V0R-1YyLfLK-2vuPWnTxUjQ=s288-c-k-c0xffffffff-no-rj-mo" style="float:right;width:100px;height:100px;" alt="Penguinator Logo">Oliver Hagen's Website</h1>
-<p>Various doings, conveniently collected for very little reason.</p>
-
 <!-- This logo should update with the YouTube one. -->
 
 <table>
@@ -35,9 +35,22 @@ padding: 5px;
    <!-- <td><p><a href="ATA.html" target="_blank">The Bad Music Scene: All The Audio Project</a></p></td>-->
   </tr>
 </table>
+<hr>
+<h3>About Me:</h3>
+<p>I'm a 19-year-old musician studying Computer Science BSc (1st year) at the University of Birmingham.</p>
+<p>I started learning music at about five years old, after watching Queen's performance at Live Aid. I took piano and singing lessons for many years, getting up to Grade 5 in singing and Grade 7 in Piano. Additionally, I've been teaching myself ukulele since the start of the first lockdown.</p>
+<p>I'm currently working on a 'Lesser-Known Covers' project in which, in an attempt to keep musically active despite my university work, I'm doing a cover of a fairly unknown song for each month of 2021.</p>
 
+
+<h4>At the moment:</h4>
+<p> I'm coming up on the end of the first year of my CS course, which means end-term exams- lots of revision to do over the next week. Still working on my lesser-known covers project, but also getting some original stuff on the go again. I'm trying to put some more work into making this website look better too, although that's a gradual process.</p>
+
+<h3>Contact me:</h3>
+<p>If you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
+<p><a href="mailto:ophagen@icloud.com">Send email</a></p>
+
+<hr>
 <h2>Latest Releases:</h2>
-
 
 <img src="https://i.ytimg.com/vi/G3N0smmkBcc/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLChg76d5_cQNLLy9bBu-tmrvUsh6A" width='300' alt="Oh Hell YouTube Thumbnail">
 <h3><a href="https://www.youtube.com/watch?v=G3N0smmkBcc" target="_blank">March: Oh Hell (Jack Conte cover)</a></h3>
@@ -48,7 +61,7 @@ padding: 5px;
         <code>audio</code> element.
 </audio>
 <br>
-
+<hr>
 <img src="https://i.ytimg.com/vi/q7du58H6CUI/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLBOTs3bQkHIheVPncKSnNKpFMCOig" width='300' alt="Get Around cover art">
 <h3><a href="https://www.youtube.com/watch?v=q7du58H6CUI" target="_blank">February: Joy Without Pleasure (Daniel Johnston cover)</a></h3>
 <audio
@@ -58,7 +71,7 @@ padding: 5px;
         <code>audio</code> element.
 </audio>
 <br>
-
+<hr>
 <img src="https://i.ytimg.com/vi/uWbwUXknqgw/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLDuXJeg8SH2ItPRCGMd-sit30qohg" width='300' alt="Get Around YouTube Thumbnail">
 <h3><a href="https://youtu.be/uWbwUXknqgw" target="_blank">January: Get Around (The Outs cover)</a></h3>
 <audio
@@ -68,7 +81,7 @@ padding: 5px;
         <code>audio</code> element.
 </audio>
 <br>
-
+<hr>
 <img src="LastWordOn2020.jpg" width='300' height='300' alt="What a God-Awful Year cover art">
 <h3><a href="https://youtu.be/bPEYikG3EiM" target="_blank">A Last Word on 2020 (What a God-Awful Year) (Single)</a></h3>
 <audio
@@ -78,7 +91,7 @@ padding: 5px;
         <code>audio</code> element.
 </audio>
 <br>
-
+<hr>
 
 <img src="MorningChildhood.png" width='300' height='300' alt="Morning Childhood cover art">
 <h3><a href="https://www.youtube.com/playlist?list=PL776zvniD1BgcfWSzQMULW9BSMiQO71t7" target="_blank">My first album, Morning Childhood.</a></h3>
@@ -90,6 +103,7 @@ padding: 5px;
         <code>audio</code> element.
 </audio>
 <br>
+<hr>
 <img src="FreightTrain.png" width='300' height='300' alt="Freight Train cover art">
 <h3><a href="https://youtu.be/6V9mgLEXJZ4" target="_blank">Freight Train (Single)</a></h3>
 <audio
@@ -99,12 +113,6 @@ padding: 5px;
         <code>audio</code> element.
 </audio>
 
-<h2>Me at the moment:</h2>
-<p> Coming up on the end of my first year at the University of Birmingham, which means end-term exams. Still working on my 2021 project of covering lesser-known songs,  but also getting some original stuff on the go again.</p>
-
-<h2>Contact me:</h2>
-<p>If, for whatever reason, you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
-<p><a href="mailto:ophagen@icloud.com">Send email</a></p>
 <hr>
 
 <p>This website is quite obviously under construction, and I'm using it as a way to learn HTML. It will probably look better soon.</p>
