--- a/index.html
+++ b/index.html
@@ -7,21 +7,10 @@
 
 <!-- Only very basic styling at the minute. -->
 
-<style>
-body {background-color: linen;}
-h1   {font-family:helvetica;}
-h2 {font-family:helvetica;}
-h3 {font-family:helvetica;}
-h4 {font-family:helvetica;}
-p    {font-family:helvetica;}
-pre	{font-family:helvetica;}
-table, th, td {
-padding: 5px;
-
-}
-</style>
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="stylesheet" href="style.css">
+<base target="_parent">
 
 <h1><img src="https://yt3.ggpht.com/a-/AOh14GiPUToUh06T6jzaxJ1V0R-1YyLfLK-2vuPWnTxUjQ=s288-c-k-c0xffffffff-no-rj-mo" style="float:right;width:100px;height:100px;" alt="Penguinator Logo">Oliver Hagen's Website</h1>
 <!-- This logo should update with the YouTube one. -->
@@ -51,67 +40,22 @@ padding: 5px;
 
 <hr>
 <h2>Latest Releases:</h2>
+<p><small>Mouse over the art for titles. Click for more info.</p>
 
-<img src="https://i.ytimg.com/vi/G3N0smmkBcc/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLChg76d5_cQNLLy9bBu-tmrvUsh6A" width='300' alt="Oh Hell YouTube Thumbnail">
-<h3><a href="https://www.youtube.com/watch?v=G3N0smmkBcc" target="_blank">March: Oh Hell (Jack Conte cover)</a></h3>
-<audio
-    controls
-    src="OhHell.mp3">
-        Your browser does not support the
-        <code>audio</code> element.
-</audio>
-<br>
-<hr>
-<img src="https://i.ytimg.com/vi/q7du58H6CUI/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLBOTs3bQkHIheVPncKSnNKpFMCOig" width='300' alt="Get Around cover art">
-<h3><a href="https://www.youtube.com/watch?v=q7du58H6CUI" target="_blank">February: Joy Without Pleasure (Daniel Johnston cover)</a></h3>
-<audio
-    controls
-    src="JoyWithoutPleasure.mp3">
-        Your browser does not support the
-        <code>audio</code> element.
-</audio>
-<br>
-<hr>
-<img src="https://i.ytimg.com/vi/uWbwUXknqgw/hqdefault.jpg?sqp=-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLDuXJeg8SH2ItPRCGMd-sit30qohg" width='300' alt="Get Around YouTube Thumbnail">
-<h3><a href="https://youtu.be/uWbwUXknqgw" target="_blank">January: Get Around (The Outs cover)</a></h3>
-<audio
-    controls
-    src="GetAround.mp3">
-        Your browser does not support the
-        <code>audio</code> element.
-</audio>
-<br>
-<hr>
-<img src="LastWordOn2020.jpg" width='300' height='300' alt="What a God-Awful Year cover art">
-<h3><a href="https://youtu.be/bPEYikG3EiM" target="_blank">A Last Word on 2020 (What a God-Awful Year) (Single)</a></h3>
-<audio
-    controls
-    src="LastWordOn2020.mp3">
-        Your browser does not support the
-        <code>audio</code> element.
-</audio>
-<br>
-<hr>
-
-<img src="MorningChildhood.png" width='300' height='300' alt="Morning Childhood cover art">
-<h3><a href="https://www.youtube.com/playlist?list=PL776zvniD1BgcfWSzQMULW9BSMiQO71t7" target="_blank">My first album, Morning Childhood.</a></h3>
-<p>Listen to the single 'Hello World!' below:</p>
-<audio
-    controls
-    src="HelloWorld.mp3">
-        Your browser does not support the
-        <code>audio</code> element.
-</audio>
-<br>
-<hr>
-<img src="FreightTrain.png" width='300' height='300' alt="Freight Train cover art">
-<h3><a href="https://youtu.be/6V9mgLEXJZ4" target="_blank">Freight Train (Single)</a></h3>
-<audio
-    controls
-    src="FreightTrain.mp3">
-        Your browser does not support the
-        <code>audio</code> element.
-</audio>
+<div id="grid">
+      <a href="Placeholder_SSI.html" class="img" style="background-image: url(OhHell.jpg)" title="Oh Hell - Jack Conte cover">
+  	</a>
+      <a href="Placeholder_SSI.html" class="img" style="background-image: url(JoyWithoutPleasure.jpg)" title="Joy Without Pleasure - Daniel Johnston cover">
+  	</a>
+      <a href="Placeholder_SSI.html" class="img" style="background-image: url(GetAround.jpg)" title="Get Around - The Outs">
+  	</a>
+      <a href="Placeholder_SSI.html" class="img" style="background-image: url(LastWordOn2020.jpg)" title="A Last Word on 2020 (What a God-Awful Year) (2020 Single)">
+  	</a>
+    <a href="Placeholder_SSI.html" class="img" style="background-image: url(MorningChildhood.png)" title="Morning Childhood (2020 album)">
+    </a>
+    <a href="Placeholder_SSI.html" class="img" style="background-image: url(FreightTrain.png)" title="Freight Train (2019 Single)">
+    </a>
+ </div>
 
 <hr>
 
