--- a/Placeholder_SSI.html
+++ b/Placeholder_SSI.html
@@ -10,7 +10,7 @@
 <h1>Song Specific Information</h1>
 <h2>Planned feature, not quite done yet...</h2>
 <p>Each release will have it's own little page with information on what it is, where it can be listened to, and some other stuff.</p>
-<p>This site is constantly being updated, so check back soon for actual content here.</p>
+<p>This site is updated frequently, so check back soon for actual content here.</p>
 
 <img src="WIPenguin.png" style="width:200px;" alt="Penguinator Logo">
 
