--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
   	</a>
     <a href="Placeholder_SSI.html" class="img" style="background-image: url(MorningChildhood.png)" title="Morning Childhood (2020 album)">
     </a>
+    <a href="Placeholder_SSI.html" class="img" style="background-image: url(PlasticBeach.png)" title="Plastic Beach: Kazoo Edition (2020 Gorillaz cover album)">
+    </a>
     <a href="Placeholder_SSI.html" class="img" style="background-image: url(FreightTrain.png)" title="Freight Train (2019 Single)">
     </a>
  </div>
