Added Freight Train info

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </a>
     <a href="Placeholder_SSI.html" class="img" style="background-image: url(PlasticBeach.png)" title="Plastic Beach: Kazoo Edition (2020 Gorillaz cover album)">
     </a>
-    <a href="Placeholder_SSI.html" class="img" style="background-image: url(FreightTrain.png)" title="Freight Train (2019 Single)">
+    <a href="FreightTrain.html" class="img" style="background-image: url(FreightTrain.png)" title="Freight Train (2019 Single)">
     </a>
  </div>
 
