Added Get Around, God-Awful Year descriptions

--- a/index.html
+++ b/index.html
@@ -43,25 +43,19 @@
 <p><small>Mouse over the art for titles. Click for more info.</p>
 
 <div id="grid">
-      <a href="Placeholder_SSI.html" class="img" style="background-image: url(OhHell.jpg)" title="Oh Hell - Jack Conte cover">
-  	</a>
-      <a href="Placeholder_SSI.html" class="img" style="background-image: url(JoyWithoutPleasure.jpg)" title="Joy Without Pleasure - Daniel Johnston cover">
-  	</a>
-      <a href="Placeholder_SSI.html" class="img" style="background-image: url(GetAround.jpg)" title="Get Around - The Outs">
-  	</a>
-      <a href="Placeholder_SSI.html" class="img" style="background-image: url(LastWordOn2020.jpg)" title="A Last Word on 2020 (What a God-Awful Year) (2020 Single)">
-  	</a>
-    <a href="Placeholder_SSI.html" class="img" style="background-image: url(MorningChildhood.png)" title="Morning Childhood (2020 album)">
-    </a>
-    <a href="Placeholder_SSI.html" class="img" style="background-image: url(PlasticBeach.png)" title="Plastic Beach: Kazoo Edition (2020 Gorillaz cover album)">
-    </a>
-    <a href="FreightTrain.html" class="img" style="background-image: url(FreightTrain.png)" title="Freight Train (2019 Single)">
-    </a>
+	<a href="Placeholder_SSI.html" class="img" style="background-image: url(Broken.png)" title="Broken - Matt Lloyd Mostyn cover"></a>
+      <a href="Placeholder_SSI.html" class="img" style="background-image: url(OhHell.jpg)" title="Oh Hell - Jack Conte cover"></a>
+      <a href="Placeholder_SSI.html" class="img" style="background-image: url(JoyWithoutPleasure.jpg)" title="Joy Without Pleasure - Daniel Johnston cover"></a>
+      <a href="GetAround.html" class="img" style="background-image: url(GetAround.jpg)" title="Get Around - The Outs"></a>
+      <a href="LastWordOn2020.html" class="img" style="background-image: url(LastWordOn2020.jpg)" title="A Last Word on 2020 (What a God-Awful Year) (2020 Single)"></a>
+    <a href="Placeholder_SSI.html" class="img" style="background-image: url(MorningChildhood.png)" title="Morning Childhood (2020 album)"></a>
+    <a href="Placeholder_SSI.html" class="img" style="background-image: url(PlasticBeach.png)" title="Plastic Beach: Kazoo Edition (2020 Gorillaz cover album)"></a>
+    <a href="FreightTrain.html" class="img" style="background-image: url(FreightTrain.png)" title="Freight Train (2019 Single)"></a>
  </div>
 
 <hr>
 
-<p>This website is quite obviously under construction, and I'm using it as a way to learn HTML. It will probably look better soon.</p>
+<p>This website is under construction, and I'm using it as a way to learn HTML. It will probably look better soon.</p>
 
 </body>
 </html>
