--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 </table>
 <hr>
 <h3>About Me:</h3>
-<p>I'm a 19-year-old musician studying Computer Science BSc (1st year) at the University of Birmingham.</p>
+<p>I'm a 19-year-old musician who's just finished my 1st year of studying Computer Science BSc at the University of Birmingham.</p>
 <p>I started learning music at about five years old, after watching Queen's performance at Live Aid. I took piano and singing lessons for many years, getting up to Grade 5 in singing and Grade 7 in Piano. Additionally, I've been teaching myself ukulele since the start of the first lockdown.</p>
 <p>I'm currently working on a 'Lesser-Known Covers' project in which, in an attempt to keep musically active despite my university work, I'm doing a cover of a fairly unknown song for each month of 2021.</p>
 
 
 <h4>At the moment:</h4>
-<p> I'm coming up on the end of the first year of my CS course, which means end-term exams- lots of revision to do over the next week. Still working on my lesser-known covers project, but also getting some original stuff on the go again. I'm trying to put some more work into making this website look better too, although that's a gradual process.</p>
+<p> I've just finished my first year of university, so I'm resting briefly. My summer plans include improving this website, recording some original songs, continuing with the Unknown Covers project, working with the <a href="https://www.youtube.com/channel/UCv9J3SQC27qlmZwaUwwvmhw/videos" target="_blank">Bad Music Scene</a> project, and starting up some social media stuff in an effort to gain visibility for my music. I'm also rehearsing a short set of originals and covers, for busking and hopefully some open mic nights... Should be fun.</p>
 
 <h3>Contact me:</h3>
 <p>If you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
