Added Love & War

--- a/GetAround.html
+++ b/GetAround.html
@@ -25,7 +25,7 @@
 Your browser does not support the audio element.
 </audio>
 <br>
-<img src="GetAround.jpg" style="float:left;width:350px;height:350px;padding:10px;" alt="A Last Word On 2020 (God-Awful Year) cover art">
+<img src="GetAround.jpg" style="float:left;width:350px;height:350px;padding:10px;" alt="Get Around cover art">
 
 <h3>About:</h3>
 <p>Song 1 of 12 in my lesser-known covers project.
