--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <p><small>Mouse over the art for titles. Click for more info.</p>
 
 <div id="grid">
+	<a href="LoveAndWar.html" class="img" style="background-image: url(LoveAndWar.png)" title="Love & War - Track Dogs cover"></a>
 	<a href="Placeholder_SSI.html" class="img" style="background-image: url(Broken.png)" title="Broken - Matt Lloyd Mostyn cover"></a>
       <a href="Placeholder_SSI.html" class="img" style="background-image: url(OhHell.jpg)" title="Oh Hell - Jack Conte cover"></a>
       <a href="Placeholder_SSI.html" class="img" style="background-image: url(JoyWithoutPleasure.jpg)" title="Joy Without Pleasure - Daniel Johnston cover"></a>
