Added home buttons

--- a/FreightTrain.html
+++ b/FreightTrain.html
@@ -9,6 +9,8 @@
 <link rel="stylesheet" href="style.css">
 <base target="_parent">
 
+<a href="index.html" style="float:right;"<p>Home</p></a>
+
 <h1>Freight Train</h1>
 <h2>2019 Single</h2>
 
