--- a/LastWordOn2020.html
+++ b/LastWordOn2020.html
@@ -9,6 +9,8 @@
 <link rel="stylesheet" href="style.css">
 <base target="_parent">
 
+<a href="index.html" style="float:right;"<p>Home</p></a>
+
 <h1>A Last Word On 2020 (God-Awful Year)</h1>
 <h2>2020 Single</h2>
 <h4>Featuring:</h4>
