--- a/LoveAndWar.html
+++ b/LoveAndWar.html
@@ -9,6 +9,8 @@
 <link rel="stylesheet" href="style.css">
 <base target="_parent">
 
+<a href="index.html" style="float:right;"<p>Home</p></a>
+
 <h1>Love & War - Track Dogs cover</h1>
 <h2>Unknown Song Project - May's song</h2>
 <h4><a href="https://youtu.be/XkCwZsZnKMQ" target="_blank">Original Song</a></h4>
