--- a/Placeholder_SSI.html
+++ b/Placeholder_SSI.html
@@ -7,6 +7,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<a href="index.html" style="float:right;"<p>Home</p></a>
+
 <h1>Song Specific Information</h1>
 <h2>Planned feature, not quite done yet...</h2>
 <p>Each release will have it's own little page with information on what it is, where it can be listened to, and some other stuff.</p>
